<resources>
    <string name="app_name">UiccBrowser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_item_mf">MF</string>
    <string name="nav_item_usim">ADF USIM</string>
    <string name="nav_item_usim_numbered">ADF USIM %1$d</string>
    <string name="nav_item_isim">ADF ISIM</string>
    <string name="nav_item_isim_numbered">ADF ISIM %1$d</string>
    <string name="unknown_label">Unknown</string>
    <string name="one_byte_tag_label">%1$s \'%2$02X\'</string>
    <string name="two_bytes_tag_label">%1$s \'%2$04X\'</string>
    <string name="three_bytes_tag_label">%1$s \'%2$06X\'</string>
    <string name="fcp_template_label">FCP template</string>
    <string name="file_size_label">File size</string>
    <string name="total_file_size_label">Total file size</string>
    <string name="file_descriptor_label">File descriptor</string>
    <string name="file_descriptor_byte_label">File descriptor byte</string>
    <string name="not_sharable">Not sharable</string>
    <string name="sharable">Sharable</string>
    <string name="df_or_adf">DF or ADF</string>
    <string name="transparent">Transparent</string>
    <string name="linear_fixed">Linear Fixed</string>
    <string name="cyclic">Cyclic</string>
    <string name="ber_tlv">BER-TLV</string>
    <string name="data_coding_byte_label">Data coding byte</string>
    <string name="record_length_label">Record length</string>
    <string name="number_of_records_label">Number of records</string>
    <string name="file_identifier_label">File identifier</string>
    <string name="df_name_label">DF name (AID)</string>
    <string name="short_file_identifier_label">Short file identifier</string>
    <string name="life_cycle_status_indicator_label">Life cycle status integer</string>
    <string name="security_attr_ref_label">Security attributes (Ref)</string>
    <string name="ef_arr_file_id_label">EF ARR file ID</string>
    <string name="seid_label">SE ID</string>
    <string name="ef_arr_record_number_label">EF ARR record number</string>
    <string name="security_attr_compact_label">Security attributes (Compact)</string>
    <string name="am_byte_label">AM (Access Mode) byte</string>
    <string name="sc_bytes_label">SC (Security Condition) bytes</string>
    <string name="proprietary_information_label">Proprietary information</string>
    <string name="uicc_characteristics_label">UICC characteristics</string>
    <string name="app_power_consumption_label">Application power consumption</string>
    <string name="supply_voltage_class_label">Supply voltage class at which the power consumption is measured</string>
    <string name="reference_frequency_label">Power consumption reference frequency</string>
    <string name="min_app_clock_freq_label">Minimum application clock frequency</string>
    <string name="available_memory_label">Amount of available memory</string>
    <string name="file_details_label">File details</string>
    <string name="reserved_file_size_label">Reserved file size</string>
    <string name="maximum_file_size_label">Maximum file size</string>
    <string name="supported_sys_commands_label">Supported system commands</string>
    <string name="uicc_env_conditions_label">Specific UICC environmental conditions</string>
    <string name="cat_secured_apdu_label">Platform to Platform CAT Secured APDU</string>
    <string name="security_attr_expand_label">Security attributes (Expand)</string>
    <string name="am_do_label">Access Mode DO</string>
    <string name="proprietary_state_machine_label">Proprietary state machine description</string>
    <string name="sc_do_always_label">Always DO</string>
    <string name="sc_do_never_label">Never DO</string>
    <string name="control_do_label">Control DO</string>
    <string name="or_do_label">OR DO</string>
    <string name="and_do_label">AND DO</string>
    <string name="not_do_label">NOT DO</string>
    <string name="pin_status_template_label">PIN status template DO</string>
    <string name="ps_do_label">PIN Status DO</string>
    <string name="usage_qualifier_label">Usage qualifier DO</string>
    <string name="key_reference_label">Key reference</string>
    <string name="app_template_label">Application Template</string>
    <string name="app_id_label">Application identifier</string>
    <string name="app_label_label">Application label</string>
    <string name="app_path_label">Path</string>
    <string name="command_apdu_label">Command APDU</string>
    <string name="discretionary_data_label">Discretionary data</string>
    <string name="discretionary_template_label">Discretionary template</string>
    <string name="url_label">URL</string>
    <string name="ef_arr_record_label">EF ARR record</string>
    <string name="ef_atr_label">EF ATR</string>
    <string name="ef_pl_label">EF PL</string>
    <string name="ef_umpc_label">EF UMPC</string>
    <string name="ef_iccid_label">EF ICCID</string>
    <string name="ef_pbr_label">EF PBR</string>
    <string name="ef_psc_label">EF PSC</string>
    <string name="ef_cc_label">EF CC</string>
    <string name="ef_puid_label">EF PUID</string>
    <string name="phone_book_type_1_reference_label">Type 1 phone book reference</string>
    <string name="phone_book_type_2_reference_label">Type 2 phone book reference</string>
    <string name="phone_book_type_3_reference_label">Type 3 phone book reference</string>
    <string name="ef_adn_reference_label">EF ADN reference %1$d</string>
    <string name="ef_iap_reference_label">EF IAP reference %1$d</string>
    <string name="ef_ext1_reference_label">EF EXT1 reference %1$d</string>
    <string name="ef_sne_reference_label">EF SNE reference %1$d</string>
    <string name="ef_anr_reference_label">EF ANR reference %1$d</string>
    <string name="ef_pbc_reference_label">EF PBC reference %1$d</string>
    <string name="ef_grp_reference_label">EF GRP reference %1$d</string>
    <string name="ef_aas_reference_label">EF AAS reference %1$d</string>
    <string name="ef_gas_reference_label">EF GAS reference %1$d</string>
    <string name="ef_uid_reference_label">EF UID reference %1$d</string>
    <string name="ef_email_reference_label">EF EMAIL reference %1$d</string>
    <string name="ef_ccp1_reference_label">EF CCP1 reference %1$d</string>
    <string name="ef_puri_reference_label">EF PURI reference %1$d</string>
    <string name="unknown_reference_label">Unknown reference %1$d</string>
    <string name="phone_book_synchronisation_counter_label">Phone book synchronisation counter</string>
    <string name="phone_book_change_counter_label">Phone book change counter</string>
    <string name="previous_unique_identifier_label">Previous unique identifier</string>
    <string name="padding_label">Padding</string>
    <string name="hex_decimal_interpretation">%1$s (%2$d)</string>
    <string name="ef_li_label">EF LI</string>
    <string name="ef_imsi_label">EF IMSI</string>
    <string name="ef_keys_label">EF Keys</string>
    <string name="ef_keys_ps_label">EF KeysPS</string>
    <string name="ef_plmn_w_act_label">EF PLMNwAcT</string>
    <string name="ef_hpplmn_label">EF HPPLMN</string>
    <string name="ef_acm_max_label">EF ACMmax</string>
    <string name="ef_acm_label">EF ACM</string>
    <string name="ef_ust_label">EF UST</string>
    <string name="ef_cbmid_label">EF CBMID</string>
    <string name="ef_ecc_label">EF ECC</string>
    <string name="ef_cbmir_label">EF CBMIR</string>
    <string name="ef_psloci_label">EF PSLOCI</string>
    <string name="ef_fdn_label">EF FDN</string>
    <string name="ef_sms_label">EF SMS</string>
    <string name="ef_msisdn_label">EF MSISDN</string>
    <string name="ef_smsp_label">EF SMSP</string>
    <string name="ef_smss_label">EF SMSS</string>
    <string name="ef_sdn_label">EF SDN</string>
    <string name="ef_ext2_label">EF EXT2</string>
    <string name="ef_ext3_label">EF EXT3</string>
    <string name="ef_smsr_label">EF SMSR</string>
    <string name="ef_ici_label">EF ICI</string>
    <string name="ef_oci_label">EF OCI</string>
    <string name="ef_ict_label">EF ICT</string>
    <string name="ef_oct_label">EF OCT</string>
    <string name="ef_ext5_label">EF EXT5</string>
    <string name="ef_ccp2_label">EF CCP2</string>
    <string name="ef_emlpp_label">EF eMLPP</string>
    <string name="ef_aaem_label">EF AaeM</string>
    <string name="ef_hiddenkey_label">EF Hiddenkey</string>
    <string name="ef_bdn_label">EF BDN</string>
    <string name="ef_ext4_label">EF EXT4</string>
    <string name="ef_cmi_label">EF CMI</string>
    <string name="ef_est_label">EF EST</string>
    <string name="ef_acl_label">EF ACL</string>
    <string name="ef_dck_label">EF DCK</string>
    <string name="ef_cnl_label">EF CNL</string>
    <string name="ef_start_hfn_label">EF START-HFN</string>
    <string name="ef_threshold_label">EF THRESHOLD</string>
    <string name="ef_oplmn_w_act_label">EF OPLMNwACT</string>
    <string name="ef_hplmn_w_act_label">EF HPLMNwAcT</string>
    <string name="ef_netpar_label">EF NETPAR</string>
    <string name="ef_pnn_label">EF PNN</string>
    <string name="ef_opl_label">EF OPL</string>
    <string name="ef_mbdn_label">EF MBDN</string>
    <string name="ef_ext6_label">EF EXT6</string>
    <string name="ef_mbi_label">EF MBI</string>
    <string name="ef_mwis_label">EF MWIS</string>
    <string name="ef_cfis_label">EF CFIS</string>
    <string name="ef_ext7_label">EF EXT7</string>
    <string name="ef_spdi_label">EF SPDI</string>
    <string name="ef_mmsn_label">EF MMSN</string>
    <string name="ef_ext8_label">EF EXT8</string>
    <string name="ef_mmsicp_label">EF MMSICP</string>
    <string name="ef_mmsup_label">EF MMSUP</string>
    <string name="ef_mmsucp_label">EF MMSUCP</string>
    <string name="ef_nia_label">EF NIA</string>
    <string name="ef_vgcs_label">EF VGCS</string>
    <string name="ef_vgcss_label">EF VGCSS</string>
    <string name="ef_vbs_label">EF VBS</string>
    <string name="ef_vbss_label">EF VBSS</string>
    <string name="ef_vgcsca_label">EF VGCSCA</string>
    <string name="ef_vbsca_label">EF VBSCA</string>
    <string name="ef_gbabp_label">EF GBABP</string>
    <string name="ef_msk_label">EF MSK</string>
    <string name="ef_muk_label">EF MUK</string>
    <string name="ef_gbanl_label">EF GBANL</string>
    <string name="ef_ehplmn_label">EF EHPLMN</string>
    <string name="ef_ehplmnpi_label">EF EHPLMNPI</string>
    <string name="ef_lrplmnsi_label">EF LRPLMNSI</string>
    <string name="ef_nafkca_label">EF NAFKCA</string>
    <string name="ef_spni_label">EF SPNI</string>
    <string name="ef_pnni_label">EF PNNI</string>
    <string name="ef_ncp_ip_label">EF NCP-IP</string>
    <string name="ef_epsloci_label">EF EPSLOCI</string>
    <string name="ef_epsnsc_label">EF EPSNSC</string>
    <string name="nav_header_no_sim">No SIM available</string>
    <string name="nav_header_no_slot">No logical slot selected</string>
    <string name="keyboard_hex_0">0</string>
    <string name="keyboard_hex_1">1</string>
    <string name="keyboard_hex_2">2</string>
    <string name="keyboard_hex_3">3</string>
    <string name="keyboard_hex_4">4</string>
    <string name="keyboard_hex_5">5</string>
    <string name="keyboard_hex_6">6</string>
    <string name="keyboard_hex_7">7</string>
    <string name="keyboard_hex_8">8</string>
    <string name="keyboard_hex_9">9</string>
    <string name="keyboard_hex_a">A</string>
    <string name="keyboard_hex_b">B</string>
    <string name="keyboard_hex_c">C</string>
    <string name="keyboard_hex_d">D</string>
    <string name="keyboard_hex_e">E</string>
    <string name="keyboard_hex_f">F</string>
    <string name="keyboard_insert">Insert</string>
    <string name="keyboard_delete">Delete</string>
    <string name="keyboard_quit">Quit</string>
    <string name="keyboard_save">Save</string>
</resources>